@@ -65,6 +65,7 @@ Version 1.1.5 to be released
 - Chg: The javascript files of CListView and CGridView are now registered at the end of the page (Qiang)
 - Chg: Log filters will now be invoked only when there are some log messages available (Qiang)
 - Chg: removed destructor from CDbCache, CDbAuthManager and CDbLogRoute to avoid potential DB connection issue (Qiang)
+- New #1542: Added CTypedMap (Qiang)
 
 
 Version 1.1.4 September 5, 2010
